[build-system]
requires = ["setuptools>=42.0.2"]
build-backend = "setuptools.build_meta"

[project]
name = "csv2ofx"
version = "0.32.0"
description = "converts a csv file of transactions to an ofx or qif file"
readme = "README.md"
authors = [
	{ name = "Reuben Cummings", email = "reubano@gmail.com" }
]
maintainers = [
	{ name = "Jason R. Coombs", email = "jaraco@jaraco.com" }
]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Natural Language :: English",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: Implementation :: CPython",
	"Programming Language :: Python :: Implementation :: PyPy",
	"Environment :: Console",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Intended Audience :: Developers",
]
dynamic = ["dependencies"]

[project.urls]
Source = "https://github.com/reubano/csv2ofx"

[project.scripts]
csv2ofx = "csv2ofx.main:run"

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.setuptools]
packages = ["csv2ofx"]
