[build-system]
requires = ["setuptools>=42.0.2"]
build-backend = "setuptools.build_meta"

[project]
name = "csv2ofx"
description = "converts a csv file of transactions to an ofx or qif file"
readme = "README.md"
authors = [
	{ name = "Reuben Cummings", email = "reubano@gmail.com" }
]
maintainers = [
	{ name = "Jason R. Coombs", email = "jaraco@jaraco.com" }
]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Natural Language :: English",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: Implementation :: CPython",
	"Programming Language :: Python :: Implementation :: PyPy",
	"Environment :: Console",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Intended Audience :: Developers",
]
dynamic = ["version", "dependencies"]

[project.urls]
Source = "https://github.com/reubano/csv2ofx"

[project.scripts]
csv2ofx = "csv2ofx.main:run"

[project.optional-dependencies]
test = [
	"pygogo>=0.13.2,<2.0.0",
	"pytest",
]

[tool.setuptools.dynamic]
version = {attr = "csv2ofx.__version__"}
dependencies = {file = "requirements.txt"}

[tool.setuptools]
packages = ["csv2ofx"]
